# Xerxes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.md  burst_pack.hh  burst_pack.hpp  burst_packge.hpp  bus.hh  bus.hpp  cpu.hpp  def.hh  def.hpp  device.hh  device.hpp  dramsim3_interface.hh  dramsim3_interface.hpp  init  main.cc  main.cpp  main_duplex_backup.cpp  main_snoop_backup.cpp  main_switch_backup.cpp  requester.hh  requester.hpp  simplessd_interface.hh  simplessd_interface.hpp  simulation.hh  simulation.hpp  snoop.hh  snoop.hpp  switch.hh  switch.hpp  system.hh  system.hpp  tiny_trace  topo.hpp  topology.hh  try  utils.hh  (+6 more)
AE-scripts/: fig10.sh  fig11.sh  fig12.sh  fig13.sh  fig14.sh  fig1516.sh  fig17.sh  run_all.sh
configs/: bus.py  default.toml  sample-bus.py  sample-snp.py  sample-topo.py  sample.py  sample.toml  test.toml  topos.py  trace.py  victim.py
configs/mkcfg/: devices.py  utils.py
output/: plot_fig11.py  plot_fig12.py  plot_fig13.py  plot_fig14.py  plot_fig1516.py  plot_fig17.py  report.py
simplessd/: CMakeLists.txt
simplessd/config/: GC.cfg  MP.cfg  NVME.cfg  PCIe4.cfg  PCIe5.cfg  origin.cfg  test.cfg
simplessd/count/: Counts.cc  Counts.hh  OpenBlock.cc  OpenBlock.hh  config.cc  config.hh  reqcount.cc  reqcount.hh
simplessd/cpu/: config.cc  config.hh  cpu.cc  cpu.hh  def.hh  ldpc.cc
simplessd/dram/: simple.cc  simple.hh
simplessd/error/: .retryStatistics.cc.swo  .retryStatistics.cc.swp  LDPC.cc  LDPC.hh  block.cc  block.hh  block.py  config.cc  config.hh  retry.cc  retry.hh  retryPage.cc  retryPage.hh  retryStatistics.cc  retryStatistics.hh  retry_statistics.csv
simplessd/ftl/: abstract_ftl.hh  ftl.cc  ftl.hh  page_mapping.cc  page_mapping.hh
simplessd/hil/: hil.cc  hil.hh
simplessd/icl/: abstract_cache.cc  abstract_cache.hh  config.cc  config.hh  generic_cache.cc  generic_cache.hh  icl.cc  icl.hh
simplessd/pal/: abstract_pal.hh  config.cc  config.hh  pal.cc  pal.hh  pal_old.cc  pal_old.hh
simplessd/sim/: config_reader.cc  config_reader.hh  cpu.cc  cpu.hh  log.cc  log.hh  simulator.cc  trace.hh
simplessd/util/: def.cc  def.hh  interface.cc  interface.hh  simplessd.cc  simplessd.hh
traces/: BTree-mini.trace  XSBench-mini.trace  liblinear-mini.trace  redis-mini.trace  silo-mini.trace
(+106 files in other folders)
